--- a/login/templates/vistasPrivadas/cargar_imagenes.html
+++ b/login/templates/vistasPrivadas/cargar_imagenes.html
@@ -20,6 +20,12 @@
         </li>
     {% endfor %}
 </ul>
+<!-- Botón de Volver al Home -->
+<div style="text-align: center; margin-top: 30px;">
+    <a href="{% url 'home' %}" style="padding: 10px 20px; background-color: #007bff; color: white; border-radius: 4px; font-size: 16px; text-decoration: none; transition: background-color 0.3s ease;">
+        Volver al Home
+    </a>
+</div>
 
 <!-- Añadir efecto hover a las imágenes y contenedores -->
 <style>
@@ -34,6 +40,10 @@
 
     button:hover {
         background-color: #45a049;
+    }
+
+    a:hover {
+        background-color: #0056b3;
     }
 </style>
 
